src/objects/AppLog__c.object
<CustomObject>
    <description>Application Log header for all custom applications developed in Apex</description>
    <fields>
        <fullName>Details_Count__c</fullName>
        <label>Details Count</label>
        <summaryForeignKey>AppLogDetail__c.AppLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LogCategory__c</fullName>
        <label>LogCategory</label>
        <picklist>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Webservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Webservice</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>OrgName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apexClassName__c</fullName>
        <description>Apex Class Name where the exception is captured</description>
        <label>apexClassName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endTime__c</fullName>
        <description>End time of the logging session</description>
        <label>endTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <description>message summary</description>
        <label>message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startTime__c</fullName>
        <description>start time of the logging session</description>
        <label>startTime</label>
        <type>DateTime</type>
    </fields>
    <label>AppLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LogCategory__c</columns>
        <columns>apexClassName__c</columns>
        <columns>Details_Count__c</columns>
        <columns>startTime__c</columns>
        <columns>endTime__c</columns>
        <columns>message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>App Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>